# qs

./: .copier-answers.yml  AGENTS.md  README.md  deployment.yaml  llama_deploy.yaml  pyproject.toml
src/quick_start/: __init__.py  workflow.py
ui/: next.config.ts  package.json  pnpm-lock.yaml
ui/src/pages/: Home.tsx
