[project]
name = "quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Lyjak", email = "adrianlyjak@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "llama-deploy-appserver",
    "python-cowsay>=1.2.1",
]

[project.scripts]
quick-start = "quick_start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
llama-deploy-appserver = { path = "../cloud_llama_deploy/packages/llama-deploy-appserver" }
