[project]
name = "quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Adrian Lyjak", email = "adrianlyjak@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["python-cowsay>=1.2.1"]

[project.scripts]
quick-start = "quick_start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.llamadeploy]
workflows = { "default" = "quick_start.workflow:echo_workflow" }

[tool.llamadeploy.ui]
directory = "ui"
